# py-frolics

./: README.md  pyproject.toml
frolics/: __main__.py  snake.py
py_frolics/: snake.py
